# CUTLASS-Examples

./: .gitignore  CMakeLists.txt  README.md
csrc/: CMakeLists.txt
csrc/01_cute_layout/: CMakeLists.txt  cute_layout.cu
docker/: cuda.Dockerfile  cuda_runpod.Dockerfile  cutlass.Dockerfile
examples/: CMakeLists.txt
examples/cute_general_matrix_multiplication/: README.md
examples/cute_general_matrix_multiplication/tests/: test_utils.hpp
examples/cute_layout_playground/: CMakeLists.txt  cute_layout_playground.cu
examples/cute_matrix_copy/: CMakeLists.txt  README.md  cute_matrix_copy.cu  cute_matrix_copy.hpp
examples/cute_matrix_copy/tests/: CMakeLists.txt  test_matrix_transpose_naive_coalesced_read.cu  test_utils.hpp
examples/cute_matrix_transpose/: CMakeLists.txt  README.md  cute_matrix_transpose.hpp  cute_matrix_transpose_shared_memory.cu  cute_matrix_transpose_shared_memory_vectorized.cu
examples/cute_matrix_transpose/tests/: CMakeLists.txt  test_matrix_transpose_shared_memory_bank_conflict_read_vectorized.cu  test_utils.hpp
examples/cute_mma_benchmark/: CMakeLists.txt  README.md  cute_mma_benchmark_sm120.cu  cute_mma_benchmark_sm120_sparse.cu  cute_mma_benchmark_sm70.cu  cute_mma_benchmark_sm75.cu  cute_mma_benchmark_sm80.cu  cute_mma_benchmark_sm89.cu
examples/cute_mma_profiler/: CMakeLists.txt  README.md  cute_mma_profiler_sm120.cu  cute_mma_profiler_sm120_sparse.cu  cute_mma_profiler_sm70.cu  cute_mma_profiler_sm75.cu  cute_mma_profiler_sm80.cu  cute_mma_profiler_sm89.cu
examples/cute_swizzle_preview/: CMakeLists.txt
examples/cute_tiled_mma_preview/: CMakeLists.txt
examples/cute_tma/: CMakeLists.txt  cute_tma_copy.cu  cute_tma_test.cu
examples/cute_tma_copy/: CMakeLists.txt  README.md  cute_tma_copy.cu  cute_tma_copy.hpp
examples/cute_tma_copy/tests/: CMakeLists.txt  profile_tma_copy.cu  test_tma_copy.cu  test_utils.hpp
examples/cute_vector_copy/: CMakeLists.txt  README.md  cute_vector_copy.cu  cute_vector_copy_vectorized.cu
examples/cute_vector_copy/tests/: test_utils.hpp
examples/matrix_transpose_cute/: CMakeLists.txt  README.md  main.cu
examples/sgemm/: CMakeLists.txt  sgemm_1.cu  tiled_copy.cu
python_examples/: gemm.py  layout.py  layout_algebra.py
