cmake_minimum_required(VERSION 3.28)

project(CUTE-TRANSPOSE-NAIVE-TEST VERSION 0.0.1 LANGUAGES CXX CUDA)

find_package(GTest REQUIRED)
find_package(CUDAToolkit REQUIRED)

find_path(CUTE_TRANSPOSE_INCLUDE cute_matrix_transpose.hpp HINTS ${CMAKE_SOURCE_DIR}/examples/cute_matrix_transpose/)

add_executable(test_matrix_transpose_naive_coalesced_read test_matrix_transpose_naive_coalesced_read.cu)
target_include_directories(test_matrix_transpose_naive_coalesced_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_naive_coalesced_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_naive_coalesced_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeNaiveCoalescedRead test_matrix_transpose_naive_coalesced_read)

add_executable(profile_matrix_transpose_naive_coalesced_read profile_matrix_transpose_naive_coalesced_read.cu)
target_include_directories(profile_matrix_transpose_naive_coalesced_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_naive_coalesced_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_naive_coalesced_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeNaiveCoalescedRead profile_matrix_transpose_naive_coalesced_read)
